--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,32 @@
 <html>
 <head>
+<meta charset="utf-8">
 <title>魔兽守卫军兑换码生成器</title>
 <script src="angular.min.js"></script>
 </head>
 <body>
 <h2>魔兽守卫军兑换码生成器</h2>
-<div ng-app="mainApp" ng-controller="studentController">
+<div ng-app="mainApp" ng-controller="cdkeyController">
 <form name="studentForm" novalidate>
 <table border="0">
-<tr><td>商品ID:</td><td><input type="text" ng-model="productID" required>
-</td></tr>
-<tr><td>商品数值(只对宝石有效): </td><td><input type="text" ng-model="productCount" required>
-</td></tr>
-<tr><td>CDKEY数量: </td><td><input type="text" ng-model="cdkeyNum" required>
-</td></tr>
-<tr><td><button ng-click="getProducts()">生成</button></td>
+<tr>
+  <td>商品ID:</td>
+  <td><input type="text" ng-model="productID" required> </td>
+</tr>
+<tr>
+  <td>商品数值(只对宝石有效): </td>
+  <td><input type="text" ng-model="productCount" required> </td>
+</tr>
+
+<tr>
+  <td>CDKEY数量: </td>
+  <td><input type="text" ng-model="cdkeyNum" required> </td>
+</tr>
+
+<tr>
+  <td><button ng-click="getProducts()">生成</button></td>
+</tr>
+
 </table>
 </form>
 <span ng-bind="cdkeys"></span>
@@ -34,7 +46,7 @@
 <script>
 var mainApp = angular.module("mainApp", []);
 var count = 1;
-mainApp.controller('studentController', ['$scope', '$http', function($scope, $http) {
+mainApp.controller('cdkeyController', ['$scope', '$http', function($scope, $http) {
    // $scope.getProducts = function(){
    //  $http.get("data.txt").success(function(response){
    //    $scope.products = response;
